# MLOps-Assignment

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  artifacts.dvc  data.dvc  mlflow.db  mlruns.db  pyproject.toml  requirements.txt
.dvc/: config
.dvc/tmp/: lock
backend/: backend_car_price.py  best_cb_model.pkl  best_cb_model_V2.pkl  house_pricing_pipeline.pkl  housepricingmodel_karthik_api.py  main.py  requirements.txt  wheatseeds_gabriel_api.py
conf/: karthik_config.yaml
data/: processed.dvc  raw.dvc
frontend/: .vercelignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/api/: main.py
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: data.tsx  navbar.tsx
frontend/src/styles/: globals.css  globals.scss
mlops_frontend/: package-lock.json  package.json
mlops_frontend/src/app/: layout.tsx
mlops_frontend/src/components/: navbar.tsx
mlops_frontend/src/styles/: globals.css
notebooks/: gabriel.ipynb
notebooks/Gabriel/: wheat_classifier_model.pkl  wheat_classifier_pipeline.pkl  wheat_seeds_gabriel.ipynb
notebooks/Gabriel/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/karthik/: data.csv  house_pricing_karthik.ipynb  hydra_house_pricing_karthik.ipynb
notebooks/karthik/.ipynb_checkpoints/: house_pricing_karthik-checkpoint.ipynb  housepricingmodel_karthik_api-checkpoint.py
notebooks/karthik/catboost_info/: catboost_training.json  learn_error.tsv  (+1 more)
notebooks/weijun/: best_car_pipeline.pkl  best_cb_model.pkl  car_price.ipynb  documentation.md
(+2644 files in other folders)
