[project]
name = "myproject"
version = "0.1.0"
description = ""
authors = [
    {name = "LEAP ",email = "56480632+gangula-karthik@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pycaret[all] (>=3.3.2,<4.0.0)",
    "kaleido (==0.2.1)",
    "fastapi (>=0.115.9,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
]

[tool.poetry]
packages = [{include = "myproject", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
